syntax = "proto3";

package admin;

option java_multiple_files = true;
option java_package = "com.adia.admin";
option java_outer_classname = "AdminProto";

// Service d'administration
service AdminService {
  rpc getAllUsers (UserListRequest) returns (UserListResponse);
  rpc banUser (UserActionRequest) returns (UserActionResponse);
  rpc deleteMessage (MessageActionRequest) returns (MessageActionResponse);
  rpc DoCheck (CheckRequest) returns (CheckResponse);
}

message CheckRequest {
  string data = 1;
}

message CheckResponse {
  bool status = 1;
  string message = 2;
}

// Messages pour la gestion des utilisateurs
message UserListRequest {
  int32 page = 1;
  int32 limit = 2;
}

message UserListResponse {
  repeated User users = 1;
  int32 total = 2;
}

message UserActionRequest {
  string userId = 1;
  string adminId = 2;
  string reason = 3;
}

message UserActionResponse {
  bool success = 1;
  string message = 2;
}

// Messages pour la gestion des messages
message MessageActionRequest {
  string messageId = 1;
  string adminId = 2;
  string reason = 3;
}

message MessageActionResponse {
  bool success = 1;
  string message = 2;
}

// Structure d'utilisateur
message User {
  string id = 1;
  string email = 2;
  string username = 3;
  string role = 4;
  bool isBanned = 5;
  string createdAt = 6;
}
